@@ -233,7 +233,7 @@ start_thread (void *arg)
 
 	      do
 		pd->nextevent = __nptl_last_event;
-	      while (atomic_compare_and_exchange_acq (__nptl_last_event, pd,
+	      while (atomic_compare_and_exchange_acq (&__nptl_last_event, pd,
 						      pd->nextevent) != 0);
 	    }
 
